<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/nav_play"
      android:icon="@drawable/menu_ic_play"
      android:title="@string/label.menu.play"/>

  <group
      android:id="@+id/group1"
      android:checkableBehavior="single">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/menu_ic_settings"
        android:title="@string/label.menu.settings"/>
    <item
        android:id="@+id/nav_howToPlay"
        android:icon="@drawable/menu_ic_manual"
        android:title="@string/label.menu.how_to_play"/>
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/menu_ic_share"
        android:title="@string/label.menu.share"/>
  </group>

  <group
      android:id="@+id/group2"
      android:checkableBehavior="single">

    <item
        android:id="@+id/nav_aboutApp"
        android:icon="@drawable/menu_ic_about"
        android:title="@string/label.menu.about_app"/>
  </group>


</menu>
