<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical"
      android:paddingBottom="63dp"
      >

    <com.beeva.corporate.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8dp"
        android:text="@string/dialog.title.card.picked"
        android:textAlignment="center"
        android:textSize="16sp"
        style="@style/TextView"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        />

    <ImageView
        android:id="@+id/ivCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="63dp"
      android:layout_alignParentBottom="true"
      >

    <com.beeva.corporate.Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@android:string/cancel"
        style="@style/Button.Dialog.Yellow"
        />

    <com.beeva.corporate.Button
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@android:string/yes"
        style="@style/Button.Dialog.Black"
        />

  </LinearLayout>

</RelativeLayout>