<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <include layout="@layout/content_main"/>
  </LinearLayout>

  <android.support.design.widget.NavigationView
      android:id="@+id/nav_view"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:background="@color/beeva.gray"
      android:fitsSystemWindows="true"
      app:itemBackground="@drawable/selector_list_menu_background"
      app:itemIconTint="@color/selector_list_menu_item"
      app:itemTextColor="@color/selector_list_menu_item"
      app:menu="@menu/activity_main_drawer"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        >

      <ImageButton
          android:id="@+id/ibBeevaLogo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:layout_marginLeft="20dp"
          android:background="@null"
          android:src="@drawable/logo_beeva"
          />
    </LinearLayout>

  </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
